--- a/src/app/modules/duels/ui/components/duels-list-section/duels-list-section.component.html
+++ b/src/app/modules/duels/ui/components/duels-list-section/duels-list-section.component.html
@@ -1,7 +1,7 @@
 <kep-card>
   <div class="card-header">
     <div class="card-title">
-      {{ 'MyDuels' | translate }}
+      {{ titleKey | translate }}
       @if (total) {
         <span class="total-count">({{ total }})</span>
       }
