--- a/src/app/modules/problems/components/problem-info-card/problem-info-card.component.html
+++ b/src/app/modules/problems/components/problem-info-card/problem-info-card.component.html
@@ -99,45 +99,23 @@
   </div>
 }
 
-<div class="languages mt-2">
-  <div class="d-flex mb-1">
-    <h5>
-      <i data-feather="code"></i>
-      {{ 'Languages' | translate }}
-    </h5>
+@if (selectedAvailableLang) {
+  <div class="selected-language mt-2">
+    <div class="d-flex mb-1">
+      <h5>
+        <i data-feather="code"></i>
+        {{ 'SelectedLanguage' | translate }}
+      </h5>
+    </div>
+
+    <attempt-language
+      [lang]="selectedAvailableLang.lang"
+      [langFull]="selectedAvailableLang.langFull"
+    />
   </div>
+}
 
-  <div class="row">
-
-    @for (availableLanguage of problem.availableLanguages;track availableLanguage) {
-      <div class="col-4 col-md-3 col-lg-6 col-xl-4 px-25">
-        <attempt-language
-          [clickable]="true"
-          [lang]="availableLanguage.lang"
-          [langFull]="availableLanguage.langFull"
-          (click)="langService.setLanguage(availableLanguage.lang)"
-        />
-      </div>
-    }
-  </div>
-
-</div>
-
-<div class="selected-language mt-2">
-  <div class="d-flex mb-1">
-    <h5>
-      <i data-feather="code"></i>
-      {{ 'SelectedLanguage' | translate }}
-    </h5>
-  </div>
-
-  <attempt-language
-    [lang]="selectedAvailableLang.lang"
-    [langFull]="selectedAvailableLang.langFull"
-  />
-</div>
-
-@if (!hideCodeGolf) {
+@if (!hideCodeGolf && selectedAvailableLang) {
   <div class="code-golf mt-2">
     <div class="d-flex mb-1">
       <h5>
