--- a/src/app/modules/problems/pages/problem/problem.component.html
+++ b/src/app/modules/problems/pages/problem/problem.component.html
@@ -2,20 +2,20 @@
   <div class="content-body">
     <app-content-header [contentHeader]="contentHeader">
       <div class="btn-group" role="group">
-        <button class="btn btn-secondary-light btn-wave" type="button">
-          <span><i data-feather="terminal"></i></span>
-          {{ 'CodeEditor.Run' | translate }}
-        </button>
-        <button class="btn btn-primary-light btn-wave" type="button">
-          <i data-feather="send"></i>
-          {{ 'CodeEditor.Submit' | translate }}
-        </button>
-      </div>
-      <div class="btn-group" role="group">
-        <button class="btn btn-primary-light btn-wave" type="button">
+        <button
+          class="btn btn-primary-light btn-wave"
+          type="button"
+          (click)="goToPreviousProblem()"
+          ngbTooltip="{{ 'PreviousProblem' | translate }}"
+        >
           <kep-icon name="left"/>
         </button>
-        <button class="btn btn-primary-light btn-wave" type="button">
+        <button
+          class="btn btn-primary-light btn-wave"
+          type="button"
+          (click)="goToNextProblem()"
+          ngbTooltip="{{ 'NextProblem' | translate }}"
+        >
           <kep-icon name="right"/>
         </button>
       </div>
